# python-development-template

./: .gitconfig  LICENSE  README.md  cpu.Dockerfile  cuda.Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json  extensions.json  postCreateCommand.sh
notebooks/: init.py  sample.ipynb
