[tool.poetry]
name = "python-development"
version = "1.0.0"
description = ""
authors = ["ShunyoKawamoto <kawamoto_shunyo@cyberagent.co.jp>"]

[tool.poetry.dependencies]
python = "3.10.*"
# ipython
ipywidgets = "^8.0.4"
ipykernel = "^6.20.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503,W504"

[tool.black]
line-length = 88

[tool.isort]
combine_as_imports = "True"
include_trailing_comma = "True"
use_parentheses = "True"
force_grid_wrap = 0
multi_line_output = 3
line_length = 88
skip = [".git", ".tox", ".venv", ".eggs", "build", "dist", "docs"]
